Update nos arquivos e instruções.

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,14 @@
+# Build with $ sudo docker build -t server .
 # Python files must be in the same folder as Dockerfile
-# Build with $ sudo docker build -t phfaustini/server .
-# Run with $ sudo docker run --name my_instance -i -t phfaustini/server
+# Run with $ sudo docker run --name my_instance -i -t server
 # More: https://www.digitalocean.com/community/tutorials/docker-explained-using-dockerfiles-to-automate-building-of-images
 
-FROM ubuntu:14.04
-MAINTAINER Pedro Faustini
+FROM ubuntu:latest
 
-RUN sudo apt-get update
+RUN su && apt-get update
 
-RUN sudo apt-get install python -y
+RUN apt-get install sudo python -y
 
 ADD server.py ./home
-
-ADD input.avi ./home
-
-ADD coral.avi ./home
 
 ADD 50mb.flv ./home
