--- a/orchestrator/Dockerfile
+++ b/orchestrator/Dockerfile
@@ -1,11 +1,10 @@
+# Build with $ sudo docker build -t firewall .
 # Python files must be in the same folder as Dockerfile
-# Build with $ sudo docker build -t phfaustini/firewall .
-# Run with $ sudo docker run --privileged=true --name my_instance -i -t phfaustini/firewall
+# Run with $ sudo docker run --privileged=true --name my_instance -i -t firewall
 # More: https://www.digitalocean.com/community/tutorials/docker-explained-using-dockerfiles-to-automate-building-of-images
 
-FROM ubuntu:14.04
-MAINTAINER Pedro Faustini
+FROM ubuntu:latest
 
-RUN sudo apt-get update
+RUN su && apt-get update
 
-RUN sudo apt-get install iptables bridge-utils ebtables -y
+RUN apt-get install sudo iptables bridge-utils ebtables -y
